2007-12-30  Pedro Alves  <pedro_alves@portugalmail.pt>

	* configure.tgt (*-*-mingw32ce*): Set gdb_osabi to
	GDB_OSABI_WINCE.
	(*-*-mingw* | *-*-cygwin*): Set gdb_osabi to GDB_OSABI_CYGWIN.

2007-12-29  Nick Hudson  <nick.hudson@dsl.pipex.com>

	* i386nbsd-tdep.c: Include "trad-frame.h" and "tramp-frame.h"
	(sigtramp_retcode, i386nbsd_sigtramp_offset, i386nbsd_sigtramp_p):
	Remove
	(i386nbsd_mc_reg_offset): New array.
	(i386nbsd_sigtramp_cache_init): New function.
	(i386nbsd_sigtramp_sc16, i386nbsd_sigtramp_sc2, i386nbsd_sigtramp_si2)
	(i386nbsd_sigtramp_si31, i386nbsd_sigtramp_si4): New signal trampoline
	frame descriptions.
	(i386nbsd_init_abi): Override ABI sigcontext defaults and register
	new signal frame unwinders
	* Makefile.in (i386nbsd-tdep.o): Update dependencies.
	* tramp-frame.h (struct tramp_frame): Allow for 48 instructions

2007-12-29  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (_initialize_ada_language): Attach executable_changed
	observer.

2007-12-28  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_evaluate_subexp): Break two large expressions
	using temporary variables.

2007-12-27  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (ada_value_cast): New function, extracted out from
	the code in ada_evaluate_subexp, case UNOP_CAST.  The code handling
	the obscure case has been removed as we think that it is actually
	unnecessary.
	(ada_evaluate_subexp): Add type case when evaluating an OP_DOUBLE
	or an OP_LONG with a non-null expect_type. Replace extracted-out
	code with call to new ada_value_cast function.

2007-12-27  Paul Hilfinger  <hilfinger@adacore.com>

	* ada-lang.c (ada_evaluate_subexp): Add cases for BINOP_LOGICAL_AND,
	BINOP_LOGICAL_OR, UNOP_LOGICAL_NOT, BINOP_BITWISE_IOR,
	BINOP_BITWISE_XOR, BINOP_BITWISE_AND.
	* language.c (lang_bool_type): Add Ada case.

2007-12-26  Joel Brobecker  <brobecker@adacore.com>

	* dwarf2read.c (read_base_type): Fix obvious &&/|| confusion.
